# communication_bluetooth_service

./: README.en.md  README.md  bluetooth.gni  bluetooth_service_hid_host_sdp.diff  bt_service.patch  bundle.json  hisysevent.yaml
patches/: developtools_integration_verification.patch  drivers_peripheral.patch  hiviewdfx_hisysevent.patch  patches.json  productdefine_common.patch  vendor_hihope.patch
sa_profile/: 1130.json  BUILD.gn
services/bluetooth/: BUILD.gn
services/bluetooth/common/: bluetooth_log.h  bt_def.h  log.h
services/bluetooth/etc/init/: BUILD.gn  bluetooth_service.cfg  bt_config.xml  bt_device_config.xml
services/bluetooth/hardware/: BUILD.gn
services/bluetooth/ipc/: BUILD.gn  ipc_blocklist.txt
services/bluetooth/ipc/include/: bluetooth_a2dp_sink_observer_proxy.h  bluetooth_a2dp_src_observer_proxy.h  bluetooth_a2dp_src_stub.h  bluetooth_avrcp_ct_observer_proxy.h  bluetooth_avrcp_tg_observer_proxy.h  bluetooth_avrcp_tg_stub.h  bluetooth_ble_advertise_callback_proxy.h  bluetooth_ble_advertiser_stub.h  bluetooth_ble_central_manager_callback_proxy.h  bluetooth_ble_central_manager_stub.h  bluetooth_ble_peripheral_observer_proxy.h  bluetooth_gatt_client_callback_proxy.h  bluetooth_gatt_client_stub.h  bluetooth_gatt_server_callback_proxy.h  bluetooth_gatt_server_stub.h  bluetooth_hfp_ag_observer_proxy.h  bluetooth_hfp_ag_stub.h  bluetooth_hfp_hf_observer_proxy.h  bluetooth_hid_host_observer_proxy.h  bluetooth_hid_host_stub.h  bluetooth_host_observer_proxy.h  bluetooth_host_stub.h  bluetooth_map_mce_observer_proxy.h  bluetooth_map_mse_observer_proxy.h  bluetooth_opp_observer_proxy.h  bluetooth_opp_stub.h  bluetooth_pan_observer_proxy.h  bluetooth_pbap_pce_observer_proxy.h  bluetooth_pbap_pse_observer_proxy.h  bluetooth_pbap_pse_stub.h  bluetooth_remote_device_observer_proxy.h  bluetooth_socket_observer_proxy.h  bluetooth_socket_stub.h
services/bluetooth/ipc/src/: bluetooth_a2dp_sink_observer_proxy.cpp  bluetooth_a2dp_sink_stub.cpp  bluetooth_a2dp_src_observer_proxy.cpp  bluetooth_a2dp_src_stub.cpp  bluetooth_avrcp_ct_observer_proxy.cpp  bluetooth_avrcp_ct_stub.cpp  bluetooth_avrcp_tg_observer_proxy.cpp  bluetooth_avrcp_tg_stub.cpp  bluetooth_ble_advertise_callback_proxy.cpp  bluetooth_ble_advertiser_stub.cpp  bluetooth_ble_central_manager_callback_proxy.cpp  bluetooth_ble_central_manager_stub.cpp  bluetooth_ble_peripheral_observer_proxy.cpp  bluetooth_gatt_client_callback_proxy.cpp  bluetooth_gatt_client_stub.cpp  bluetooth_gatt_server_callback_proxy.cpp  bluetooth_gatt_server_stub.cpp  bluetooth_hfp_ag_observer_proxy.cpp  bluetooth_hfp_ag_stub.cpp  bluetooth_hfp_hf_observer_proxy.cpp  bluetooth_hfp_hf_stub.cpp  bluetooth_hid_host_observer_proxy.cpp  bluetooth_hid_host_stub.cpp  bluetooth_host_observer_proxy.cpp  bluetooth_host_stub.cpp  bluetooth_map_mce_observer_proxy.cpp  bluetooth_map_mce_stub.cpp  bluetooth_map_mse_observer_proxy.cpp  bluetooth_map_mse_stub.cpp  bluetooth_opp_observer_proxy.cpp  bluetooth_opp_stub.cpp  bluetooth_pan_observer_proxy.cpp  bluetooth_pan_stub.cpp  bluetooth_pbap_pce_observer_proxy.cpp  bluetooth_pbap_pce_stub.cpp  bluetooth_pbap_pse_observer_proxy.cpp  bluetooth_pbap_pse_stub.cpp  bluetooth_remote_device_observer_proxy.cpp  bluetooth_socket_observer_proxy.cpp  bluetooth_socket_stub.cpp
services/bluetooth/server/: BUILD.gn
services/bluetooth/server/include/: bluetooth_a2dp_source_server.h  bluetooth_avrcp_tg_server.h  bluetooth_ble_advertiser_server.h  bluetooth_ble_central_manager_server.h  bluetooth_ble_filter_matcher.h  bluetooth_gatt_client_server.h  bluetooth_gatt_server_server.h  bluetooth_hfp_ag_server.h  bluetooth_hid_host_server.h  bluetooth_host_server.h  bluetooth_pan_server.h  bluetooth_pbap_pce_server.h  bluetooth_pbap_pse_server.h  bluetooth_socket_server.h  bluetooth_utils_server.h  remote_observer_list.h
services/bluetooth/server/src/: bluetooth_a2dp_sink_server.cpp  bluetooth_a2dp_source_server.cpp  bluetooth_avrcp_ct_server.cpp  bluetooth_avrcp_tg_server.cpp  bluetooth_ble_advertiser_server.cpp  bluetooth_ble_central_manager_server.cpp  bluetooth_ble_filter_matcher.cpp  bluetooth_gatt_client_server.cpp  bluetooth_gatt_server_server.cpp  bluetooth_hfp_ag_server.cpp  bluetooth_hfp_hf_server.cpp  bluetooth_hid_host_server.cpp  bluetooth_host_server.cpp  bluetooth_opp_server.cpp  bluetooth_pan_server.cpp  bluetooth_pbap_pce_server.cpp  bluetooth_pbap_pse_server.cpp  bluetooth_socket_server.cpp  bluetooth_utils_server.cpp
services/bluetooth/service/: BUILD.gn
services/bluetooth/service/include/: interface_adapter_ble.h  interface_adapter_classic.h  interface_adapter_manager.h  interface_profile_a2dp_src.h  interface_profile_gatt_client.h  interface_profile_hfp_ag.h  interface_profile_manager.h  interface_profile_pbap_pse.h
services/bluetooth/stack/: BUILD.gn
test/example/BluetoothSocketTest/: .gitignore  build-profile.json5  hvigorfile.ts  hvigorw  hvigorw.bat  oh-package-lock.json5  oh-package.json5
test/example/bluetoothtest/: .gitignore  @ohos.bluetooth.d.ts  BUILD.gn  build-profile.json5  cpbt.sh  hvigorfile.js  hvigorfile.ts  hvigorw  hvigorw.bat  oh-package-lock.json5  oh-package.json5
test/moduletest/: BUILD.gn
test/unittest/: BUILD.gn
test/unittest/a2dp/: BUILD.gn  a2dp_snk_test.cpp  a2dp_src_test.cpp
test/unittest/avrcp/: BUILD.gn  avrcp_ct_test.cpp  avrcp_tg_test.cpp
test/unittest/ble/: BUILD.gn  ble_test.cpp  ble_test.h
test/unittest/gatt/: BUILD.gn  gatt_client_test.cpp  gatt_server_test.cpp
test/unittest/gatt_c/: BUILD.gn  gatt_c_test.cpp
test/unittest/hfp/: BUILD.gn  hfp_ag_test.cpp  hfp_hf_test.cpp
test/unittest/hid/: BUILD.gn  hid_host_test.cpp
test/unittest/host/: BUILD.gn  host_test.cpp
test/unittest/map/: BUILD.gn  map_mse_test.cpp
test/unittest/opp/: BUILD.gn  opp_test.cpp
test/unittest/pan/: BUILD.gn  pan_test.cpp
test/unittest/pbap/: BUILD.gn
test/unittest/spp/: BUILD.gn  spp_test.cpp
tools/: BUILD.gn  config.gni  paths.gni
tools/common/menu/: BUILD.gn
tools/hcitool/: BUILD.gn  hcitool_cmds.cpp  hcitool_cmds.h  hcitool_menus.json  main.cpp
(+532 files in other folders)
